[project]
name = "blog-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "appdirs==1.4.4",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4>=4.13.4",
    "bleach==6.2.0",
    "capstone==4.0.2",
    "certifi==2023.7.22",
    "cffi==1.16.0",
    "charset-normalizer==3.2.0",
    "cmsis-pack-manager==0.5.3",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "customtkinter==5.2.0",
    "cycler==0.12.1",
    "darkdetect==0.8.0",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "distlib==0.3.8",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "executing==2.2.0",
    "fastjsonschema==2.21.1",
    "filelock==3.15.4",
    "fonttools==4.55.3",
    "fqdn==1.5.1",
    "h11==0.14.0",
    "hidapi==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.4",
    "importlib-metadata==7.1.0",
    "importlib-resources==6.4.0",
    "intelhex==2.3.0",
    "intervaltree==3.1.0",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.4.2",
    "json5==0.12.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter==1.1.1",
    "jupyter-client==8.6.3",
    "jupyter-console==6.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.2",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-widgets==3.0.15",
    "kiwisolver==1.4.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-core==0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
    "langgraph==0.6.5",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.2",
    "langsmith==0.4.14",
    "lark==1.1.9",
    "libusb-package==1.0.26.1",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "mistune==3.1.3",
    "natsort==8.4.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "notebook==7.4.2",
    "notebook-shim==0.2.4",
    "notion-client==2.3.0",
    "ntplib==0.4.0",
    "numpy==2.2.0",
    "openai==1.100.1",
    "orjson==3.11.2",
    "ormsgpack==1.10.0",
    "overrides==7.7.0",
    "packaging==24.2",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pillow==11.0.0",
    "platformdirs==4.2.2",
    "prettytable==3.10.0",
    "prometheus-client==0.22.0",
    "prompt-toolkit==3.0.51",
    "psutil==5.9.8",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyelftools==0.31",
    "pygments==2.19.1",
    "pylink-square==1.2.0",
    "pyocd==0.36.0",
    "pyparsing==3.2.0",
    "pyserial==3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==3.3.0",
    "pyusb==1.2.1",
    "pywin32==310 ; sys_platform == 'win32'",
    "pywinpty==2.0.15 ; sys_platform == 'win32'",
    "pyyaml==6.0.1",
    "pyzmq==26.4.0",
    "referencing==0.36.2",
    "requests==2.31.0",
    "requests-toolbelt==1.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rpds-py==0.25.0",
    "scikit-learn==1.6.0",
    "scipy==1.14.1",
    "send2trash==1.8.3",
    "setuptools==69.5.1",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soupsieve==2.7",
    "stack-data==0.6.3",
    "streamlit>=1.45.1",
    "tavily-python>=0.7.11",
    "tenacity==9.1.2",
    "terminado==0.18.1",
    "threadpoolctl==3.5.0",
    "tinycss2==1.4.0",
    "tornado==6.5",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uri-template==1.3.0",
    "urllib3==2.0.4",
    "virtualenv==20.26.3",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "widgetsnbextension==4.0.14",
    "xxhash==3.5.0",
    "zipp==3.18.1",
    "zstandard==0.24.0",
]
